--- a/Round2/Manuscript/preamble.tex
+++ b/Round2/Manuscript/preamble.tex
@@ -54,7 +54,7 @@
 \newcommand{\Y}{\rv Y} % The random variable y
 \newcommand{\gauss}[1]{\mathcal{N}\left(#1\right)} % The Gaussian distribution
 \newcommand{\gaussp}[2]{\mathcal{N}_{#1}\left(#2\right)} % The Gaussian distribution
-\newcommand{\mycaption}{Simulation details in Appendix~\ref{apx:simulation_details} except the changes in the sub-captions.}
+\newcommand{\mycaption}{Simulation details in Section\ref{sec:simulation_details}, except the changes in the sub-captions.}
 \newcommand{\argmin}[2]{\mathop{argmin} _{#1}\set{#2}} % The argmin operator
 \newcommand{\argmax}[2]{\mathop{argmax} _{#1}\set{#2}} % The argmin operator
 \newcommand{\R}{\textsf{R }}
