--- a/Round2/Manuscript/Permuting_Accuracy.bib
+++ b/Round2/Manuscript/Permuting_Accuracy.bib
@@ -1452,3 +1452,13 @@ Contact: tongt@hkbu.edu.hk},
 	year={1996},
 	publisher={JSTOR}
 }
+
+
+@article{rosenblatt2017mixture,
+	title={On Mixture Alternatives and Wilcoxon's Signed-Rank Test},
+	author={Rosenblatt, Jonathan D and Benjamini, Yoav},
+	journal={The American Statistician},
+	number={just-accepted},
+	year={2017},
+	publisher={Taylor \& Francis}
+}
